<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2013 Piotr Zawadzki.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
  
  Contributors:
      Piotr Zawadzki - initial API and implementation
-->
<resources>
    
    <string name="app_name">Group Buying</string>
    
    <string-array name="offers_fragment_titles">
        <item>NEARBY</item>
        <item>MY CITY</item>
        <item>SHOPPING</item>
        <item>TRAVEL</item>
    </string-array>
    
    
    <!-- <string name="client_id">${client.id}</string>
	<string name="client_secret">${client.secret}</string>
	<string name="connection_repository_encryption_password">${connection.repository.encryption.password}</string>
	<string name="connection_repository_encryption_salt">${connection.repository.encryption.salt}</string>
    <string name="base_url">${base.url}</string> -->
    <string name="base_url">http://192.168.0.195:8080/group-buying-rest/</string>
    <!-- <string name="base_url">http://87.207.209.32:8080/group-buying-rest/</string> -->
    <string name="client_id">tonr</string>
	<string name="client_secret">secret</string>
	<string name="connection_repository_encryption_password">password</string>
	<string name="connection_repository_encryption_salt">5c0744940b5c369b</string>
	
    <string name="sign_in">Sign In</string>
    <string name="cancel">Cancel</string>
    <!-- Image Content Descriptions -->

    <string name="content_description_greenhouse_header">Greenhouse Header</string>
    <string name="content_description_springsource_logo">SpringSource Logo</string>
    <string name="buy_now_button_text">Buy now!</string>
    
    <string name="coupon_expired_title">Expired</string>
    <string name="coupon_used_title">Used</string>
    <string name="coupon_available_title">Available</string>
    <string name="paypal_payment_method_title">Paypal</string>
    <string name="select_payment_method_title">Select payment method:</string>
    <string name="selected_offer_label">Selected offer:</string>
    <string name="payment_details_label">Payment details:</string>
    <string name="payment_sum_label">Sum</string>
    <string name="payment_method_label">Method</string>
    <string name="confirm_purchase_button_title">Confirm purchase</string>
    <string name="post_purchase_thank_you_message">"Thank you for buying "</string>
    <string name="post_order_message">You coupon should be available shortly from your account.</string>
    <string name="see_more_offers_button">See more offers</string>
    <string name="cancel_button">Cancel</string>
    <string name="view_coupon_button">View coupon</string>
    <string name="empty_list_text">No offers available</string>
    
    <string name="retry">Retry</string>
    <string name="network_error_title">Network error</string>
    <string name="network_error_message">Network error occurred. Please check your connection and click to retry.</string>
    <string name="connection_error_title">Connection error</string>
    <string name="connection_error_message">Connection error occurred. Please try again later.</string>
    
    <string name="loading_offer_message">Loading offer…</string>
    
    <string name="loading_offers_message">Loading offers…</string>
    
    <string name="loading_coupons_message">Loading coupons…</string>
    
    <string name="loading_more_offers_text">Loading more offers…</string>
    
    <string name="paypal_application_id">APP-80W284485P519543T</string>
    
    <string name="paypal_merchant_name">Group Buying</string>
    
    <string name="paypal_checkout_url_prefix">https://www.sandbox.paypal.com/cgi-bin/webscr?cmd=_express-checkout-mobile</string>
    
    <string name="coupon_id_prefix">"Coupon ID: "</string>
    
    <string name="security_code_prefix">"Security code: "</string>
    
    <string name="log_in_header">Log in</string>
    
    <string name="username_hint">Username</string>
    
    <string name="password_hint">Password</string>
    
    <string name="no_location_message">Your network location service is disabled. Please enable it to fetch nearby offers.</string>
    
    <string name="enable">Enable</string>
    
    <string name="do_nothing">Do nothing</string>
    
    <string name="getting_location_text">Getting location…</string>
    
    <string name="couldn_t_get_your_location_text">Couldn\'t get your location</string>
    
    <string name="no_offers_available">No offers available nearby</string>
    
    <string name="nfc_message_sent">Message sent!</string>
    
    
</resources>
