<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2013 Piotr Zawadzki.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
  
  Contributors:
  	Piotr Zawadzki - initial API and implementation
      
-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"        
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="#DDDDDD" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/selectedOfferLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/selected_offer_label"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/selectedOfferTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:padding="5dp"
                android:text="Lorem ipsum"
                android:textColor="#999999"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/paymentDetailsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/payment_details_label"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/paymentSumLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/paymentSumLabel"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/payment_sum_label"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/paymentSumValue"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="134 PLN"
                    android:textColor="#999999"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/paypalPaymentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/paymentMethodLabel"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/payment_method_label"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/paymentMethodTitle"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/paypal_payment_method_title"
                    android:textColor="#999999"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    
    <Button 
        android:id="@+id/confirmPurchaseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/confirm_purchase_button_title"
        />

</RelativeLayout>